--- a/.github/workflows/task.yml
+++ b/.github/workflows/task.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron:  '0 0,5,12 * * *'
+#   schedule:
+#     - cron:  '0 0,5,12 * * *'
 
 
 jobs:
